Try Float16Vector for vectorscore computation